<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setupFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSchedularMeeting"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp">

            <LinearLayout
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <info.androidhive.fontawesome.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_angle_left_solid"
                    android:textColor="@color/colorSchedularButtonText"
                    android:textSize="40sp"
                    app:solid_icon="true" />

                <TextView
                    style="@style/SchedularButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/schedule_meeting_back" />
            </LinearLayout>

            <TextView
                android:id="@+id/setupTitle"
                style="@style/SchedularButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_meeting_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/datePickerView"
        style="@style/TextDropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/schedule_screen_margin"
        android:background="@drawable/spinner_drawable"
        android:text="@string/date_prompt"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/startTimePickerView"
        style="@style/TextDropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datePickerView"
        android:layout_margin="@dimen/schedule_screen_margin"
        android:background="@drawable/spinner_drawable"
        android:text="@string/start_time_prompt"
        app:layout_constraintTop_toBottomOf="@id/datePickerView" />

    <TextView
        android:id="@+id/endTimePickerView"
        style="@style/TextDropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startTimePickerView"
        android:layout_margin="@dimen/schedule_screen_margin"
        android:background="@drawable/spinner_drawable"
        android:text="@string/end_time_prompt"
        app:layout_constraintTop_toBottomOf="@id/startTimePickerView" />

    <EditText
        android:id="@+id/descriptionText"
        style="@style/Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/endTimePickerView"
        app:layout_constraintTop_toBottomOf="@id/endTimePickerView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionText">

        <com.example.meetingscheduler.views.MeetingButton
            android:id="@+id/scheduleMeetingButton"
            style="@style/SchedularButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/schedule_screen_margin"
            android:text="@string/schedule_meeting_button" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>